--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- PWA Viewport — covers notch/safe-area on modern phones -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
+    />
 
     <!-- Theme & Status Bar -->
     <meta name="theme-color" content="#2563eb" />
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1e293b" />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#1e293b"
+    />
     <meta name="msapplication-navbutton-color" content="#2563eb" />
     <meta name="msapplication-TileColor" content="#2563eb" />
 
     <!-- Apple PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <meta name="apple-mobile-web-app-title" content="FitPro" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -24,10 +34,17 @@
     <meta name="application-name" content="FitPro" />
 
     <!-- SEO -->
-    <meta name="description" content="FITPRO AGENDA PERSONAL — Gestão completa para Personal Trainers: agenda, alunos, evolução e finanças." />
+    <meta
+      name="description"
+      content="FITPRO AGENDA PERSONAL — Gestão completa para Personal Trainers: agenda, alunos, evolução e finanças."
+    />
 
     <!-- Manifest -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="manifest"
+      href="%PUBLIC_URL%/manifest.json"
+      crossorigin="use-credentials"
+    />
 
     <!-- Prevent phone number detection -->
     <meta name="format-detection" content="telephone=no" />
